# CBOE-BOE-Encoding-Decoding-Engine

./: .gitignore  DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: benchmark.yml  build.yml  ci.yml
codegen/: cboe_spec.yaml  codegen.py  requirements.txt
engine/: CMakeLists.txt
engine/cmake/: cboe_coreConfig.cmake.in
engine/include/cboe/: Allocator.h  Buffer.h  CMakeLists.txt  Deserializer.h  FramingEngine.h  Messages.h  README.md  Serializer.h  util.h
engine/src/: Allocator.cpp  Buffer.cpp  Deserializer.cpp  FramingEngine.cpp  Messages.h  README.md  Serializer.cpp
scripts/: README.md  bench_latency.sh  build_yaml.py  deploy.sh  run_codegen.sh  run_tests.sh
tests/: Benchmark.cpp  CMakeLists.txt  FramingEngineTests.cpp  README.md  SerializerTests.cpp
